# HRC_DetAnyPose

./: .gitignore  README.md  environment.yaml  requirements.txt
Azure_Kinect_ROS_Driver/: CMakeLists.txt
Azure_Kinect_ROS_Driver/launch/: driver.launch  kinect_rgbd.launch
Azure_Kinect_ROS_Driver/meshes/: camera_mount.STL
Azure_Kinect_ROS_Driver/urdf/: azure_kinect.urdf.xacro  camera_mount.urdf.xacro
Universal_Robots_ROS_Driver/ur_calibration/: CMakeLists.txt
Universal_Robots_ROS_Driver/ur_calibration/src/: calibration_correction.cpp
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5e_bringup.launch
Universal_Robots_ROS_Driver/ur_robot_driver/scripts/: tool_communication
ViTpose/vitpose_run/: CMakeLists.txt  package.xml
ViTpose/vitpose_run/src/: GPT_vision.py  demo.py  run_BOP_YCBV.py  setup.py  stream_inference.py  vision_ros.py
ViTpose/vitpose_run/src/classes/: dinov2.py  k4a_camera.py  megapose.py  mmdet_sam.py
ViTpose/vitpose_run/src/generate/: generate_ycb.py  sample_sphere.py
ViTpose/vitpose_run/src/megapose/: config.py  rclone.conf
ViTpose/vitpose_run/src/megapose/datasets/: web_scene_dataset.py
ViTpose/vitpose_run/src/megapose/inference/: pose_estimator.py  types.py  utils.py
ViTpose/vitpose_run/src/megapose/lib3d/: multiview.py
ViTpose/vitpose_run/src/megapose/models/: pose_rigid.py
ViTpose/vitpose_run/src/megapose/panda3d_renderer/: panda3d_batch_renderer.py  panda3d_batch_renderer_mp.py
ViTpose/vitpose_run/src/megapose/scripts/: run_inference_on_example.py
ViTpose/vitpose_run/src/megapose/utils/: load_model.py
ViTpose/vitpose_run/src/mmdet_sam/: detector_sam_demo.py
ViTpose/vitpose_run/src/utils/: calculate_iou.py  choose.py  convert.py  similarity.py
fmauch_universal_robot/ur_description/launch/: load_ur.launch
fmauch_universal_robot/ur_description/urdf/: ur_combine.xacro
pycontrol/: CMakeLists.txt  package.xml  setup.py
pycontrol/scripts/: media.py  pose.py
pycontrol/src/pycontrol/: camera.py  conveyor.py  gripper.py  robot.py  sensor.py
robotiq_85_gripper/robotiq_85_bringup/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_bringup/launch/: robotiq_85.launch
robotiq_85_gripper/robotiq_85_description/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_gripper.xacro
robotiq_85_gripper/robotiq_85_driver/: CMakeLists.txt  setup.py
robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py  robotiq_85_driver.py  robotiq_85_gripper.py
robotiq_85_gripper/robotiq_85_gripper/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_moveit_config/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_moveit_config/launch/: planning_context.launch
robotiq_85_gripper/robotiq_85_msgs/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_simulation/robotiq_85_gazebo/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_simulation/robotiq_85_simulation/: CMakeLists.txt
robotiq_85_gripper/si_utils/: CMakeLists.txt
robotiq_ft_sensor/: CMakeLists.txt  package.xml
robotiq_ft_sensor/launch/: ft_sensor.launch
robotiq_ft_sensor/nodes/: rq_sensor.cpp
vention_conveyor/vention_conveyor_bringup/: CMakeLists.txt  package.xml
vention_conveyor/vention_conveyor_bringup/launch/: vention_conveyor.launch
vention_conveyor/vention_conveyor_description/: CMakeLists.txt  package.xml
vention_conveyor/vention_conveyor_description/meshes/: workbench_mount.STL
vention_conveyor/vention_conveyor_description/urdf/: workbench_table.csv  workbench_table.urdf.xacro
vention_conveyor/vention_conveyor_driver/: CMakeLists.txt  MachineMotion.py  package.xml  setup.py
vention_conveyor/vention_conveyor_msgs/: CMakeLists.txt  package.xml
vention_conveyor/vention_conveyor_msgs/msg/: ConveyorCmd.msg  ConveyorStat.msg
workbench/workbench_bringup/: CMakeLists.txt  package.xml
workbench/workbench_bringup/launch/: assembled_workbench.launch  combine.rviz
workbench/workbench_description/: CMakeLists.txt  package.xml
workbench/workbench_description/launch/: upload_workbench_assemble.launch
workbench/workbench_description/urdf/: workbench_assemble.urdf.xacro
workbench/workbench_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
workbench/workbench_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur.srdf
workbench/workbench_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
